# clipmanx

./: .gitignore  LICENSE  README.md  build.sh  clipmanx.desktop  install-latest.sh  pyproject.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build-deb.yml
debian/: changelog  control  rules
docs/: BUILD_GUIDE.md  CREDITS.md  DISTRIBUTION.md  INSTALL.md
src/clipman/: __main__.py  app.py  clipboard.py  history.py  settings.py
src/clipmanx/: __main__.py  app.py  clipboard.py  history.py  logger.py  settings.py
