[project]
name = "clipman"
version = "0.1.0"
description = "A lightweight clipboard manager for Linux with GTK tray icon"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
clipman = "clipman.__main__:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
