[project]
name = "clipmanx"
version = "0.1.0"
description = "A lightweight clipboard manager for Linux with GTK tray icon"
authors = [
    {name = "Victor Sejas", email = "vrsejas@gmail.com"}
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
clipmanx = "clipmanx.__main__:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clipmanx = ["assets/*"]
